# codas

./: .devcontainer.json  .gitignore  Cargo.toml  LICENSE.txt  README.md  build_web.sh  commit.sh
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.ops/: build_python.sh  build_web.sh  commit.sh  git-cliff.toml  release.sh  release.toml
codabase/: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
codabase/src/: args.rs  main.rs
codabase/src/args/: compile.rs  inspect.rs
codas/: CHANGELOG.md  Cargo.toml  README.md
codas-cdylib/: CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
codas-flow/: CHANGELOG.md  Cargo.toml  README.md
codas-flow/benches/: channels.rs
codas-flow/src/: async_support.rs  lib.rs  stage.rs
codas-kit/: CHANGELOG.md  Cargo.toml  README.md
codas-kit/src/: args.rs  main.rs
codas-kit/src/args/: cryptography.rs
codas-kit/tests/codas/: coda.md
codas-macros/: CHANGELOG.md  Cargo.toml  README.md
codas-macros/src/: lib.rs
codas-macros/tests/: export.rs  full_coda.md  greeter_coda.md
codas-web/: CHANGELOG.md  Cargo.toml  README.md
codas-web/src/: lib.rs
codas/benches/: codecs.rs  prost_boat.rs  sailboat.md  sailboat.proto
codas/src/: codec.rs  langs.rs  lib.rs  parse.rs  stream.rs  types.rs
codas/src/codec/: decode.rs  encode.rs
codas/src/langs/: open_api.rs  python.rs  rust.rs  sql.rs  typescript.rs
codas/src/parse/: token.rs
codas/src/types/: binary.rs  cryptography.rs  dynamic.rs  list.rs  map.rs  number.rs  text.rs
codas/tests/: codec.rs
ops/: commit.sh  release.sh  release.toml
