[package]
name = "codabase"
description = "The Codabase development platform."
categories = [
    "development-tools",
]
keywords = [
    "codabase",
    "codas", 
    "cli",
]
readme = "README.md"
license = "FSL-1.1-MIT"
version = "0.0.1"
authors = [
    "With Caer, LLC <with@caer.cc>",
]
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.release]
release = true

[package.metadata.docs.rs]
# Generate documentation with all features enabled
all-features = true

[dependencies]
codas = { path = "../codas", features = ["std", "parse", "langs-open-api", "langs-python", "langs-rust", "langs-sql", "langs-typescript"] }
codas-macros.workspace = true
serde.workspace = true

clap = { version = "4.5.38", features = ["derive"] }