[package]
name = "codabase"
description = "Polyglot development tool for markdown-defined data types."
categories = [
    "development-tools",
]
keywords = [
    "cli",
    "codas", 
    "markdown",
    "serialization",
]
readme = "README.md"
license = "FSL-1.1-MIT"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.release]
release = true

[package.metadata.docs.rs]
# Generate documentation with all features enabled
all-features = true

[dependencies]
codas = { workspace = true, features = ["std", "parse", "langs-open-api", "langs-python", "langs-rust", "langs-sql", "langs-typescript"] }
codas-macros.workspace = true
serde.workspace = true

clap = { version = "4.5.38", features = ["derive"] }
