[package]
name = "codas-cdylib"
description = "C-style dynamic libraries for Codas, providing support for languages/runtimes like Python and WASM."
readme = "README.md"
license = "MIT"
version = "0.5.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.release]
release = false

[package.metadata.docs.rs]
# Generate documentation with all features enabled
all-features = true

[lib]
name = "codas"
crate-type = ["cdylib"]

[features]
wasm = ["dep:getrandom", "dep:wasm-bindgen", "dep:js-sys"]
python = ["dep:pyo3"]

[dependencies]
codas = { workspace = true, features = ["parse", "langs-open-api", "langs-python", "langs-rust", "langs-typescript"] }

# WASM-specific dependencies.
wasm-bindgen = { version = "=0.2.100", optional = true }
js-sys = { version = "=0.3.77", optional = true }
getrandom = { version = "*", features = ["js"], optional = true }

# Python-specific dependencies.
pyo3 = { version = "0.25.0", features = ["extension-module", "abi3", "macros"], optional = true }
