[package]
name = "codas-web"
description = "Web APIs for Codas."
readme = "README.md"
version = "0.5.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[package.metadata.release]
release = false

[package.metadata.docs.rs]
# Generate documentation with all features enabled
all-features = true

[lib]
crate-type = ["cdylib"]

[dependencies]
codas = { path = "../codas", features = ["parse", "langs-open-api", "langs-python", "langs-rust", "langs-typescript"] }

# Enable JS random number support.
getrandom = { version = "*", features = ["js"] }

# WASM binding generation
wasm-bindgen = "=0.2.100"

# JavaScript interop.
js-sys = "=0.3.77"